[gd_scene load_steps=2 format=3 uid="uid://bndfj5x4ft6kr"]

[ext_resource type="Script" path="res://Scripts/card.gd" id="1_40j7w"]

[node name="Card" type="ColorRect"]
custom_minimum_size = Vector2(250, 210)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_40j7w")

[node name="CardNumberLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -11.5
offset_right = 5.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 150
text = "0"

[node name="Filter" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ShowTimer" type="Timer" parent="."]
one_shot = true

[connection signal="gui_input" from="Filter" to="." method="_on_filter_gui_input"]
[connection signal="timeout" from="ShowTimer" to="." method="_on_show_timer_timeout"]
